--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@ body {
      margin:0;  
      width: 100%;  
      height: 100%;  
+  background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcThVP-TlIFb3DVrF9K66VQQNiBG6r7-ZjN54Q&usqp=CAU");
 
+  background-size:100%100%;
+
+  background-repeat:no-repeat;
+
+  background-attachment:fixed;
      animation: gradient 15s ease infinite;  
      display: flex;  
      justify-content: center;  
@@ -42,9 +48,9 @@ body {
  width: 100%;  
  position: relative;  
   margin-top:10px;
- max-width: 520px;  
+ max-width: 1120px;  
  height: 100%;  
- max-height: 620px;  
+ max-height: 1220px;  
  border-radius: 10px;  
  }  
  .slider-image-wrapper {  
